--- a/index.html
+++ b/index.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Flappy Bird</title>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="src/main.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/5.9.0/math.min.js" type="text/javascript"></script>
 </head>
+
 <body>
-    <img src="cloud.png" id = "cloud">
+    <img src="cloud.png" id="cloud">
     <canvas id="myCanvas">
-        
+
     </canvas>
-   <script src="neural_network.js" type ="text/javascript"></script>
-    <script src="main.js" type ="text/javascript"></script>
+    <!-- <script type="module" src="/src/main.jsx"></script> -->
+    <script src="src/neural_network.js" type="text/javascript"></script>
+    <script src="src/main_old.js" type="text/javascript"></script>
 </body>
+
 </html>
