--- a/index.html
+++ b/index.html
@@ -3,19 +3,12 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Flappy Bird</title>
-    <link rel="stylesheet" href="src/main.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/5.9.0/math.min.js" type="text/javascript"></script>
+    <title>So Called Flappy Bird</title>
 </head>
 
 <body>
-    <img src="cloud.png" id="cloud">
-    <canvas id="myCanvas">
-
-    </canvas>
-    <!-- <script type="module" src="/src/main.jsx"></script> -->
-    <script src="src/neural_network.js" type="text/javascript"></script>
-    <script src="src/main_old.js" type="text/javascript"></script>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
 </body>
 
 </html>
