--- a/index.html
+++ b/index.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <title>So Called Flappy Bird</title>
+<meta charset="UTF-8">
+<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="description"
+    content="Play So Called Flappy Bird - An enhanced, responsive HTML5 clone of the classic Flappy Bird game with AI training and competition modes.">
+<meta name="keywords"
+    content="flappy bird, html5 game, browser game, neural network flappy bird, ai flappy bird, javascript game, react game">
+<meta name="author" content="Rajiv Nayan">
+<meta property="og:title" content="So Called Flappy Bird">
+<meta property="og:description"
+    content="Play the classic Flappy Bird game rebuilt in modern React with Neural Network AI training!">
+<meta property="og:image" content="/favicon.svg">
+<meta property="og:type" content="website">
+<meta name="twitter:card" content="summary">
+<meta name="twitter:title" content="So Called Flappy Bird">
+<meta name="twitter:description" content="Play the classic Flappy Bird clone with AI competition mode.">
+<meta name="twitter:image" content="/favicon.svg">
+<title>So Called Flappy Bird</title>
 </head>
 
 <body>
